# aliana

./: .gitignore  AliAnaSelector.cxx  AliAnaSelector.h  CMakeLists.txt  LinkDef.h  Makefile  ana.C  plot.C
src/: AliAnaQA.cxx  AliAnaQA.h  AliAnaSelector.cxx  AliAnaSelector.h  AliTreeReaderValue.cxx  AliTreeReaderValue.h  Analysis_LinkDef.h  LinkDef.h  Plot_LinkDef.h  ana.C  eventQA.C  plot.C  plotter.cxx  plotter.h  run.sh
